--- a/style.css
+++ b/style.css
@@ -220,7 +220,14 @@ a:visited {
 }
 
 .form__btn {
-  display: none;
+  display: block;
+  background-color: var(--color-brand--1);
+  padding: 0.6rem;
+  margin-left: 1rem;
+  border-radius: 50%;
+  font-size: 1rem;
+  font-weight: 700;
+  font-size: 1.4rem;
 }
 
 .form__modal {
@@ -252,28 +259,28 @@ a:visited {
   flex: 1;
   height: 100%;
   background-color: var(--color-light--1);
+  position: relative;
 }
 
 .map__error {
   margin-left: 0 auto;
-  background-color: var(--color-brand--1);
-  border: 2px solid red;
+  background-color: rgba(253, 4, 4, 0.6);
   border-radius: 1rem;
   font-weight: 700;
-  color: black;
-  height: 5rem;
+  color: var(--color-dark--3);
   min-width: 10rem;
 
   position: fixed;
   left: 35%;
   bottom: 5rem;
   z-index: 100000;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   padding: 0.8rem 2rem;
   transition: all 0.5s;
   cursor: default;
-  height: 5.5rem;
   text-align: center;
+
+  box-shadow: 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 /*////////////////////////////////////////////////
@@ -441,4 +448,22 @@ a:visited {
 .hidden_loader {
   visibility: hidden;
   opacity: 0;
+}
+
+.my_position {
+  z-index: 10000;
+  width: 6rem;
+  height: 6rem;
+  position: absolute;
+  background-color: var(--color-brand--1);
+  bottom: 10rem;
+  right: 1rem;
+  border-radius: 50%;
+  box-shadow: 2px 2px rgba(0, 0, 0, 0.3);
+  border: 2px solid black;
+  font-size: 3.5rem;
+}
+
+.my_position--text {
+  margin-left: 1rem;
 }
