--- a/style.css
+++ b/style.css
@@ -456,7 +456,7 @@ a:visited {
   height: 6rem;
   position: absolute;
   background-color: var(--color-brand--1);
-  bottom: 10rem;
+  top: 10rem;
   right: 1rem;
   border-radius: 50%;
   box-shadow: 2px 2px rgba(0, 0, 0, 0.3);
